Flask-app-w-K8s/kubernetes/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: flask-app
      # Every pod
  template:
    metadata:
      labels:
        app: flask-app
        # Pod confg
    spec:
      containers:
        - name: flask-app-container
          image: flask-app-testing
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 5000
              protocol: TCP
